# silica-hdl

./: .gitignore  .travis.yml  Cargo.toml  build.rs
silica-syntax/: Cargo.toml  build.rs
silica-syntax/src/: ast.rs  error.rs  lexer.rs  lib.rs  parser.lalrpop  visit.rs
silica-syntax/tests/: test.rs
silica-verilog/: Cargo.toml
silica-verilog/src/: ast.rs  lib.rs  transform.rs
src/: main.rs
src/codegen/: mod.rs  to_verilog.rs
src/libcodegen/: Cargo.toml
src/libcodegen/src/: lib.rs  to_verilog.rs
src/libsyntax/: Cargo.toml  build.rs
src/libsyntax/src/: ast.rs  grammar.lalrpop  lexer.rs  lib.rs  token.rs  visit.rs
src/libsyntax/tests/: integration.rs
src/libverilog/: Cargo.toml
src/libverilog/src/: lib.rs
src/syntax/: ast.rs  grammar.lalrpop  lexer.rs  mod.rs  visit.rs
src/verilog/: mod.rs
tests/: integration.rs  test.rs
tests/fail/: simple_fail.si
tests/pass-output/: simple_mod.si  simple_mod.v
tests/resources/and_gate/: and_gate.si  and_gate.v
tests/resources/expressions/: expressions.si  expressions.v
tests/utils/: mod.rs
